<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidMaps</string>
 	<string name="mapstyle">Map Style</string>
 	<string name="satellite">Satellite</string>
 	<string name="traffic">Traffic</string>
 	<string name="mylocation">My Location</string>
 	<string name="exit">Exit</string>
 	<string name="about">About</string>
 	<string name="help">Help</string>
 	<string name="option">Option</string>
 	<string name="getdirection">Get Direction</string>

</resources>
