<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/mapstyle"
          android:title="@string/mapstyle" >
        <menu>
            <item android:id="@+id/satellite"
                  android:title="@string/satellite" />
            <item android:id="@+id/traffic"
                  android:title="@string/traffic" />
        </menu>
    </item>
    <item android:id="@+id/getdirection"
          android:title="@string/getdirection" />
    <item android:id="@+id/weather"
          android:title="@string/weather" />
    <item android:id="@+id/option"
          android:title="@string/option" />          
    <item android:id="@+id/about"
          android:title="@string/about" />
    <item android:id="@+id/help"
          android:title="@string/help" />
    <item android:id="@+id/exit"
          android:title="@string/exit" />
</menu>